--- a/src/js/components/Card/Card.scss
+++ b/src/js/components/Card/Card.scss
@@ -5,21 +5,30 @@
   position: relative;
   padding-top: 56.25%;
   flex-direction: column;
+  vertical-align: middle;
+  justify-content: center;
 
   &_description {
     top: 0;
+    left: 0;
+    padding: 0;
     z-index: 2;
-    width: 95%;
+    width: 100%;
     height: 100%;
     display: flex;
-    padding: 0 20px;
     position: absolute;
     flex-direction: column;
     background: var(--transparent-black-30);
 
+    h4, p {
+      padding: 0 20px;
+    }
+
     h4 {
+      margin: auto 0;
+      font-size: 30px;
       color: var(--white);
-      margin-bottom: auto;
+      text-align: center;
     }
 
     p {
@@ -28,14 +37,45 @@
       color: var(--white);
     }
 
+    button {
+      border: 0;
+      bottom: 0;
+      outline: none;
+      display: flex;
+      padding: 10px;
+      right: -100px;
+      position: absolute;
+      border-radius: 20px;
+      background: var(--red);
+      margin: 0 20px 10px auto;
+      transition: right .3s;
+    }
+
+  }
+
+  &:hover {
+
+    button {
+      right: 0;
+    }
+
+    .card-item {
+
+      &_image {
+        transform: scale(1.4);
+      }
+
+    }
+
   }
 
   &_image {
-    left: 0;
     top: 0;
+    left: 0;
     width: 100%;
     position: absolute;
     transform: scale(1.2);
+    transition: transform .3s;
   }
 
 }
