--- a/src/js/containers/CardContainer/CardContainer.scss
+++ b/src/js/containers/CardContainer/CardContainer.scss
@@ -4,6 +4,14 @@
   width: 100%;
   height: 100%;
   grid-template-columns: repeat(3, 1fr);
+  
+  @media (max-width: 1366px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
   img {
     width: 100%;
     height: auto;
