--- a/src/js/containers/SliderContainer/SliderContainer.scss
+++ b/src/js/containers/SliderContainer/SliderContainer.scss
@@ -1,11 +1,14 @@
 .slider-container {
+  padding: 30px 0;
+  width: 90%;
+  margin: 0 auto;
   .card-item {
     width: 80%;
     height: 200px;
     display: block;
-    padding: 40px 20px;
-    position: relative;
     overflow: hidden;
+    position: relative;
+    padding: 40px 20px;
     img {
       transform: scale(1.5);
     }
