--- a/src/js/components/App/App.scss
+++ b/src/js/components/App/App.scss
@@ -1,8 +1,8 @@
 .app {
-  padding: 0;
+  padding: 0 5%;
   display: flex;
   margin: 0 auto;
-  max-width: 80%;
+  max-width: 100%;
   align-items: center;
   flex-direction: column;
   justify-content: center;
