--- a/src/js/components/Category/Category.scss
+++ b/src/js/components/Category/Category.scss
@@ -14,13 +14,13 @@
     }
     .arrow {
       right: 0;
-      width: 40px;
       content: '';
-      height: 25px;
+      width: 20px;
+      height: 20px;
       position: absolute;
       font-size: inherit;
       transition: transform .3s;
-      background: url("../../../assets/images/svg/arrow.svg") 0 0/45px 25px no-repeat;
+      background: url("../../../assets/images/svg/arrow.svg") 0 0/100% 100% no-repeat;
     }
 
   }
