--- a/src/js/containers/SliderContainer/SliderContainer.scss
+++ b/src/js/containers/SliderContainer/SliderContainer.scss
@@ -1,7 +1,10 @@
+@import "../../../scss/media_breakpoints";
+
 .slider-container {
   padding: 30px 0;
   width: 90%;
   margin: 0 auto;
+
   .card-item {
     width: 80%;
     margin: 0 5%;
@@ -10,11 +13,15 @@
     overflow: hidden;
     position: relative;
     padding: 40px 20px;
-
     img {
       transform: scale(1.5);
+      @include media-breakpoint-down(xxl) {
+        width: auto;
+        height: 100%;
+      }
     }
   }
+
   h2 {
     cursor:pointer;
     font-size: 16px;
@@ -22,4 +29,5 @@
     color:var(--link-color);
     text-transform: uppercase;
   }
+
 }
